MDEV-6106 Cannot create a table with 229 or greater columns in TokuDB

correct the length encoding for the extra2 frm segment. add the comment.